--- a/popup.css
+++ b/popup.css
@@ -41,12 +41,12 @@ body {
 }
 
 
-/* Search header*/
+/* Search header */
 
 #table-header {
   display: flex;
   align-items: center;
-  margin: 0 auto 5px 16%;
+  margin: 0 auto 5px 17%;
 }
 
 #search-wrapper {
@@ -60,7 +60,7 @@ body {
   border-style: none;
   outline: none;
   background-color: transparent;
-  width: 130px;
+  width: 125px;
 }
 
 .ui-icon-search {
@@ -71,10 +71,18 @@ body {
 
 
 
-/* Buttons */
+/* Apply footer */
+
+#table-footer {
+  margin-top: 7px;
+  text-align: center;
+  position: absolute;
+  left: 0;
+  right: 0;
+}
 
 #exec {
-  margin: 7px 0 0 39%;
+  padding: 2px 8px 2px 8px;
   box-shadow: 0px 2px 3px 1px hsla(262, 90%, 10%, 70%);
   border-radius: 3px;
   border-width: 1px;
