--- a/popup.css
+++ b/popup.css
@@ -95,9 +95,11 @@ body {
 #exec:hover {
   color: rgba(0%, 0%, 0%, 68%);
 }
+/*
 #exec:focus {
   box-shadow: inset 0px 0px 1px 1px hsla(155, 90%, 55%, 80%), 0px 2px 3px 1px hsla(262, 90%, 10%, 70%);
 }
+*/
 
 
 .btn {
@@ -169,6 +171,9 @@ body {
 }
 
 #saved-shaders-wrapper, #active-shaders-wrapper {
+  pointer-events: none;
+  position: relative;
+  z-index: 0;
   box-sizing: border-box;
   padding: 1px 1px 1px 1px;
 }
@@ -183,7 +188,6 @@ body {
 
 .shader-table {
   box-sizing: border-box;
-  padding: 2px 6px 2px 4px;
   height: 100%;
   width: 100%;
   box-shadow: inset 1px 1px 5px 1px hsla(262, 90%, 10%, 70%);
@@ -191,6 +195,10 @@ body {
 }
 
 .shader {
+  pointer-events: auto;
+  position: relative;
+  z-index: -1;
+  padding: 0 6px 0 4px;
   cursor: default;
   display: flex;
   align-items: center;
@@ -208,6 +216,8 @@ body {
 }
 */
 .shader-icon {
+  position: relative;
+  z-index: 1;
   flex: none;
   justify-content: flex-end;
 }
@@ -232,6 +242,10 @@ body {
   color: rgba(0, 0, 0, 50%);
   font-style: italic;
   cursor: default;
+}
+
+.selected {
+  background-color: hsla(155, 90%, 55%, 80%);
 }
 
 
