--- a/panel.css
+++ b/panel.css
@@ -1,6 +1,6 @@
 
 /* !important flags are for jquery resizable compatability */
-#shaderbliss-panel {
+#shadervision-panel {
   position: fixed !important;
   width: 40%;
   height: 30%;
@@ -14,14 +14,14 @@
   padding-bottom: 20px;
 }
 
-#shaderbliss-header {
+#shadervision-header {
   background-color: lightgrey;
   display: flex;
   align-items: center;
   height: 20px;
 }
 
-#shaderbliss-filename {
+#shadervision-filename {
   margin: 2px 0px 1px 7px;
   padding: 0px 2px 0px 2px;
   max-width: 40%;
@@ -31,13 +31,13 @@
   font-size: 13px;
 }
 
-#shaderbliss-savedstatus {
+#shadervision-savedstatus {
   font-family: system-ui;
   font-size: 13px;
   font-weight: bold;
 }
 
-#shaderbliss-readonlystatus {
+#shadervision-readonlystatus {
   flex: auto;
   margin-left: 9px;
   font-family: system-ui;
@@ -45,7 +45,7 @@
   font-style: italic;
 }
 
-#shaderbliss-close {
+#shadervision-close {
   flex: none;
   justify-content: flex-end;
   background-color: hsla(343, 93%, 40%, 80%);
@@ -54,7 +54,7 @@
   transform: scale(0.85);
 }
 
-#shaderbliss-close:hover {
+#shadervision-close:hover {
   box-shadow: 0px 0px 4px 1px hsla(343, 93%, 40%, 80%);
 }
 
